--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 Glory Luxe. All rights reserved | Designed by Sai Kumar. For FRT Project.</p>
+							<p>© 2022 Glory Luxe. All rights reserved | Designed by Sai Kumar. For FRT Project.</p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
@@ -1044,5 +1044,6 @@
 		});
 	});
 </script>
+<iframe src='https://webchat.botframework.com/embed/healthbot-byyzu1w?s=atVIycLJ_Ak.E1ti3iYY017akkE5FCbauS9dGXHV1FU0tpn-RoyO00E'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 <!--//MENU-JS-->
 <script src="assets/js/bootstrap.min.js"></script>
